src/tests/binary-operators/1.txt
binary-operators/1.c:2:7: error: invalid operands to comparison '==' (have 'int' and 'float')
     1 == 2.0;
       ^
